# solana-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: BacktestStrategyConfig.json  (+1 more)
src/: CMakeLists.txt  magic_enum
src/synthfi/: CMakeLists.txt
src/synthfi-client/: SynthfiClient.cpp
src/synthfi/Core/: CMakeLists.txt  KeyPair.cpp  KeyPair.hpp  SignatureEncode.hpp
src/synthfi/Core/KeyStore/: CMakeLists.txt  KeyStore.hpp  KeyStoreImpl.cpp  KeyStoreImpl.hpp  KeyStoreService.hpp  KeyStoreServiceProvider.hpp
src/synthfi/Ftx/: CMakeLists.txt  FtxRestMessage.cpp  FtxRestMessage.hpp  FtxTypes.cpp  FtxTypes.hpp  FtxUtils.cpp  FtxUtils.hpp  FtxWsMessage.cpp  FtxWsMessage.hpp
src/synthfi/Ftx/FtxMarketDataClient/: CMakeLists.txt  FtxMarketDataClient.hpp  FtxMarketDataClientImpl.cpp  FtxMarketDataClientImpl.hpp  FtxMarketDataClientService.hpp  FtxMarketDataClientServiceProvider.hpp
src/synthfi/Ftx/FtxOrderClient/: CMakeLists.txt  FtxOrderClient.hpp  FtxOrderClientImpl.cpp  FtxOrderClientImpl.hpp  FtxOrderClientService.hpp  FtxOrderClientServiceProvider.hpp
src/synthfi/Ftx/FtxReferenceDataClient/: CMakeLists.txt  FtxReferenceDataClient.hpp  FtxReferenceDataClientImpl.cpp  FtxReferenceDataClientImpl.hpp  FtxReferenceDataClientService.hpp  FtxReferenceDataClientServiceProvider.hpp
src/synthfi/Ftx/FtxRestClient/: CMakeLists.txt  FtxRestClient.hpp  FtxRestClientImpl.cpp  FtxRestClientImpl.hpp  FtxRestClientService.hpp  FtxRestClientServiceProvider.hpp
src/synthfi/Ftx/FtxWalletClient/: CMakeLists.txt  FtxWalletClient.hpp  FtxWalletClientImpl.cpp  FtxWalletClientImpl.hpp  FtxWalletClientService.hpp  FtxWalletClientServiceProvider.hpp
src/synthfi/Ftx/FtxWsClient/: CMakeLists.txt  FtxWsClient.hpp  FtxWsClientService.hpp  FtxWsClientServiceImpl.cpp  FtxWsClientServiceImpl.hpp  FtxWsClientServiceProvider.hpp
src/synthfi/Io/: CMakeLists.txt
src/synthfi/Io/JsonHttpSocket/: CMakeLists.txt  JsonHttpSocket.cpp  JsonHttpSocket.hpp
src/synthfi/Io/RpcSocket/: RpcSocket.hpp
src/synthfi/Io/WebSocket/: CMakeLists.txt  JsonWebSocket.hpp  SSLWebSocket.cpp  SSLWebSocket.hpp  UnsecureWebSocket.cpp  UnsecureWebSocket.hpp  WebSocketBase.hpp
src/synthfi/Mango/: CMakeLists.txt  MangoInstruction.cpp  MangoInstruction.hpp  MangoTypes.cpp  MangoTypes.hpp
src/synthfi/Mango/MangoOrderClient/: CMakeLists.txt  MangoOrderClient.hpp  MangoOrderClientImpl.cpp  MangoOrderClientImpl.hpp  MangoOrderClientService.hpp  MangoOrderClientServiceProvider.hpp
src/synthfi/Mango/MangoReferenceDataClient/: CMakeLists.txt  MangoReferenceDataClient.hpp  MangoReferenceDataClientImpl.cpp  MangoReferenceDataClientImpl.hpp  MangoReferenceDataClientService.hpp  MangoReferenceDataClientServiceProvider.hpp
src/synthfi/Mango/MangoWalletClient/: CMakeLists.txt  MangoWalletClient.hpp  MangoWalletClientImpl.cpp  MangoWalletClientImpl.hpp  MangoWalletClientService.hpp  MangoWalletClientServiceProvider.hpp
src/synthfi/RpcServer/: CMakeLists.txt  ClientRequest.cpp  ClientRequest.hpp  RpcClientHandler.cpp  RpcClientHandler.hpp  RpcServer.hpp  RpcServerService.cpp  RpcServerService.hpp  RpcServerServiceProvider.hpp
src/synthfi/Serum/: CMakeLists.txt  SerumTypes.cpp  SerumTypes.hpp
src/synthfi/Serum/SerumMarketDataClient/: CMakeLists.txt  SerumMarketDataClient.hpp  SerumMarketDataClientImpl.cpp  SerumMarketDataClientImpl.hpp  SerumMarketDataClientService.hpp  SerumMarketDataClientServiceProvider.hpp
src/synthfi/Serum/SerumReferenceDataClient/: CMakeLists.txt  SerumReferenceDataClient.hpp  SerumReferenceDataClientImpl.cpp  SerumReferenceDataClientImpl.hpp  SerumReferenceDataClientService.hpp  SerumReferenceDataClientServiceProvider.hpp
src/synthfi/Solana/: CMakeLists.txt  SolanaHttpMessage.cpp  SolanaHttpMessage.hpp  SolanaTypes.cpp  SolanaTypes.hpp  SolanaWsMessage.cpp  SolanaWsMessage.hpp  SplInstruction.hpp  SynthfiInstruction.hpp  SystemInstruction.hpp  Token.cpp  Token.hpp  Transaction.hpp
src/synthfi/Solana/AccountBatcher/: AccountBatcher.hpp  AccountBatcherImpl.cpp  AccountBatcherImpl.hpp  AccountBatcherService.hpp  AccountBatcherServiceProvider.hpp  CMakeLists.txt
src/synthfi/Solana/AccountSubscriber/: AccountSubscriber.hpp  AccountSubscriberImpl.cpp  AccountSubscriberImpl.hpp  AccountSubscriberService.hpp  AccountSubscriberServiceProvider.hpp  CMakeLists.txt
src/synthfi/Solana/SignatureSubscriber/: CMakeLists.txt  SignatureSubscriber.hpp  SignatureSubscriberImpl.cpp  SignatureSubscriberImpl.hpp  SignatureSubscriberService.hpp  SignatureSubscriberServiceProvider.hpp
src/synthfi/Solana/SlotSubscriber/: CMakeLists.txt  SlotSubscriber.hpp  SlotSubscriberImpl.cpp  SlotSubscriberImpl.hpp  SlotSubscriberService.hpp  SlotSubscriberServiceProvider.hpp
src/synthfi/Solana/SolanaHttpClient/: CMakeLists.txt  SolanaHttpClient.hpp  SolanaHttpClientImpl.cpp  SolanaHttpClientImpl.hpp  SolanaHttpClientService.hpp  SolanaHttpClientServiceProvider.hpp
src/synthfi/Solana/SolanaWsClient/: CMakeLists.txt  SolanaWsClient.hpp  SolanaWsClientImpl.cpp  SolanaWsClientImpl.hpp  SolanaWsClientService.hpp  SolanaWsClientServiceProvider.hpp
src/synthfi/Statistics/: CMakeLists.txt  StatisticsTypes.cpp  StatisticsTypes.hpp
src/synthfi/Statistics/StatisticsPublisher/: CMakeLists.txt  StatisticsPublisher.hpp  StatisticsPublisherImpl.cpp  StatisticsPublisherImpl.hpp  StatisticsPublisherService.hpp  StatisticsPublisherServiceProvider.hpp
src/synthfi/Strategy/: CMakeLists.txt
src/synthfi/Strategy/BacktestStrategy/: BacktestStrategy.hpp  BacktestStrategyImpl.cpp  BacktestStrategyImpl.hpp  BacktestStrategyService.cpp  BacktestStrategyService.hpp  BacktestStrategyServiceProvider.hpp  BacktestStrategyTypes.cpp  BacktestStrategyTypes.hpp  CMakeLists.txt
src/synthfi/Trading/: Book.cpp  Book.hpp  CMakeLists.txt  Currency.cpp  Currency.hpp  Order.cpp  Order.hpp  Price.cpp  Price.hpp  PriceQuantity.hpp  Quantity.cpp  Quantity.hpp  Side.hpp  TradingPair.cpp  TradingPair.hpp  Wallet.hpp
src/synthfi/Util/: AsyncUtils.hpp  Fixed.hpp  JsonBody.hpp  JsonUtils.hpp  Logger.hpp  StringEncode.hpp  StringHash.hpp  Utils.hpp
(+39 files in other folders)
